# bonsai

./: .appveyor.yml  .codecov.yml  .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG  CHANGELOG.rst  LICENSE  MANIFEST  MANIFEST.in  Pipfile  README.md  README.rst  TODO  appveyor.yml  azure-pipelines.yml  ldapclient.c  ldapclient.h  ldapentry.c  ldapentry.h  ldapvaluelist.c  ldapvaluelist.h  pyldapmodule.c  pyproject.toml  setup.cfg  setup.py  uniquelist.c  uniquelist.h  utils.c  utils.h
.appveyor/: ConfigAD.ps1  InstallAD.ps1  request.info  run_with_env.cmd  v3ext.txt
.ci/: build-dependencies.sh
.ci/docker/: Dockerfile  Dockerfile-client  entrypoint.sh  start_slapd.sh  supervisord.conf
.ci/krb5/: kdc.conf  krb5.conf  users.keytab
.ci/openldap/: configure_ldap.sh  slapd.conf
.github/workflows/: testing.yml
.github/workflows/scripts/: check_digest_state.sh  install_docker_mac.sh  wait_container_ready.sh  wait_docker_mac.sh  wait_ldap_server.sh
.travis/: delay.py
.travis/docker/: Dockerfile  entrypoint.sh  start_slapd.sh  supervisord.conf
.travis/openldap/: configure_ldap.sh  slapd.conf
docs/: Makefile  advanced.rst  api.rst  changelog.rst  conf.py  index.rst  install.rst  make.bat  requirements.txt  tutorial.rst
lib/: __init__.py  errors.py  ldapclient.py  ldapconnection.py  ldapdn.py  ldapentry.py  ldapreference.py  ldapurl.py  ldapvaluelist.py  ldif.py  pool.py  tornadoldapconnection.py  utils.py
lib/asyncio/: __init__.py  aioconnection.py  aiopool.py
lib/gevent/: __init__.py  geventconnection.py
lib/tornado/: __init__.py  tornadoconnection.py
pyLDAP/: __init__.py  errors.c  errors.h  errors.py  ldapclient.c  ldapclient.h  ldapclient.py  ldapconnection.c  ldapconnection.h  ldapdn.py  ldapentry.c  ldapentry.h  ldapurl.py  ldapvaluelist.c  pyldapmodule.c  uniquelist.c  uniquelist.h  utils.c  utils.h
pyldap/: __init__.py  aioldapconnection.py  errors.py  geventldapconnection.py  ldap-xplat.c  ldap-xplat.h  ldapclient.py  ldapconnection.c  ldapconnection.h  ldapconnection.py  ldapconnectiter.c  ldapconnectiter.h  ldapdn.py  ldapentry.c  ldapentry.h  ldapentry.py  ldapmodlist.c  ldapmodlist.h  ldapoperation.c  ldapoperation.h  ldapsearchiter.c  ldapsearchiter.h  ldapurl.py  ldapvaluelist.c  ldapvaluelist.h  pyldapmodule.c  uniquelist.c  uniquelist.h  utils.c  utils.h  wldap-utf8.c  wldap-utf8.h
src/: bonsaimodule.c  ldap-xplat.c  ldap-xplat.h  ldapconnection.c  ldapconnection.h  ldapconnectiter.c  ldapconnectiter.h  ldapentry.c  ldapentry.h  ldapmodlist.c  ldapmodlist.h  ldapsearchiter.c  ldapsearchiter.h  ldapvaluelist.c  ldapvaluelist.h  uniquelist.c  uniquelist.h  utils.c  utils.h  wldap-utf8.c  wldap-utf8.h
src/_bonsai/: bonsaimodule.c  ldap-xplat.c  ldap-xplat.h  ldapconnection.c  ldapconnection.h  ldapconnectiter.c  ldapentry.c  ldapsearchiter.c  utils.c  utils.h  wldap-utf8.c  wldap-utf8.h
src/bonsai/: __init__.py  errors.py  ldapclient.py  ldapconnection.py  ldapdn.py  ldapentry.py  ldapreference.py  ldapurl.py  ldapvaluelist.py  ldif.py  pool.py  utils.py
src/bonsai/active_directory/: __init__.py  acl.py  sid.py
src/bonsai/asyncio/: __init__.py  aioconnection.py  aiopool.py
src/bonsai/gevent/: __init__.py  geventconnection.py
src/bonsai/tornado/: __init__.py  tornadoconnection.py
src/bonsai/trio/: __init__.py  trioconnection.py
tests/: conftest.py  ldapclient_test.py  ldapconnection_test.py  ldapdn_test.py  ldapentry_test.py  ldapurl_test.py  ldapvaluelist_test.py  test.ini  test_ad_acl.py  test_ad_securitydescriptor.py  test_ad_sid.py  test_ad_useraccountcontrol.py  test_asyncio.py  test_gevent.py  test_ldapclient.py  test_ldapconnection.py  test_ldapdn.py  test_ldapentry.py  test_ldapreference.py  test_ldapurl.py  test_ldapvaluelist.py  test_ldifreader.py  test_ldifwriter.py  test_pool.py  test_tornado.py  test_trio.py  test_utils.py
tests/testenv/: Dockerfile  configure_ldap.sh  delay.py  entrypoint.sh  generate_cert.sh  supervisord.conf
tests/testenv/certs/: cacert.key  cacert.pem  client.key  client.pem
tests/testenv/dns/: named.conf.temp  named.host.temp  rev.host.temp
tests/testenv/krb5/: kadm5.acl  kdc.conf  krb5.conf
tests/testenv/ldifs/: base.ldif  overlays.ldif  ppolicy.ldif  referrals.ldif  sasl.ldif  schema.ldif  settings.ldif  sssvlv.ldif  users.ldif
