[tool.poetry]
name = "bonsai"
version = "1.5.3"
description = "Python 3 module for accessing LDAP directory servers."
authors = ["noirello <noirello@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
gevent = { version = "^24.2.1", optional = true }
tornado = { version = "^6.2", optional = true }
trio = { version = "<1.0", optional = true }
typing-extensions = { version = ">=4.0.0", python = "<3.8" }

[tool.poetry.extras]
gevent = ["gevent"]
tornado = ["tornado"]
trio = ["trio"]

[tool.poetry.dev-dependencies]
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
pytest-timeout = "^2.3.0"
codecov = "2.1.13"
sphinx = "^7.1.2"
furo = "2024.8.6"
pylint = "^3.2.7"
mypy = "^1.11.2"
black = "24.8.0"
pydivert = { version = "^2.1", markers = "sys_platform == 'win32'" }
delocate = { version = "^0.12", markers = "sys_platform == 'darwin'" }

[build-system]
requires = [
    "setuptools >= 40.6.2",
    "wheel >= 0.30.0",
]
build-backend = "setuptools.build_meta"
