[build-system]
requires = [
    "setuptools >= 61.0.0",
    "wheel >= 0.30.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "bonsai"
description = "Python 3 module for accessing LDAP directory servers."
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version"]
authors = [{name = "noirello", email = "noirello@gmail.com"}]
requires-python = '>=3.10,<4.0'
readme = "README.rst"
keywords = [
    "python3",
    "ldap",
    "ldap3",
    "python-ldap",
    "libldap",
    "winldap",
    "asyncio",
    "gevent",
    "tornado",
    "trio"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Programming Language :: C",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP",
]

[project.urls]
Homepage = "https://github.com/noirello/bonsai"
Repository = "https://github.com/noirello/bonsai.git"
Documentation = "https://bonsai.readthedocs.io"

[project.optional-dependencies]
gevent = ['gevent (>=1.4.0)']
tornado = ['tornado (>=5.1.1)']
trio = ['trio (>=0.16.0)']

[tool.poetry]
requires-poetry = '>=2.0'
version = '1.5.5'

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
pytest-timeout = "^2.3.0"
codecov = "2.1.13"
sphinx = "^8.0.0"
furo = "2025.12.19"
pylint = "^3.2.7"
mypy = "^1.11.2"
black = "25.12.0"
pydivert = { version = "^2.1", markers = "sys_platform == 'win32'" }
delocate = { version = "^0.12", markers = "sys_platform == 'darwin'" }

